[package]
name = "pynacors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pynacors"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.3"
numpy = "0.15"
rand = "0.8.5"
ordered-float = "2.10.0"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[profile.release]
lto = true